# template-cmake

./: .clang-format  .gitignore  LICENSE  README.md
cmake/: find_grpc.cmake  find_gtest.cmake
scripts/: README.md  add_library.py  component_registry.py  init_project.py  step_executor.py  utils.py
scripts/templates/: add_library.cmake  add_project_executable.cmake  add_project_library.cmake  execute_main.cc.in  library_header.h.in  library_source.cc.in  pkg-config-template.pc.in  project.cmake  templateConfig.cmake.in
scripts/templates/components/grpc/: config.cmake.in  meta.json
scripts/templates/components/grpc/example/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
scripts/templates/components/grpc/example/protos/: helloworld.proto
scripts/templates/components/gtest/: add_gtest.cmake  config.cmake.in  meta.json
scripts/templates/components/gtest/example/: tests_CMakeLists.txt.in
scripts/templates/components/gtest/example/gmock_example/: CMakeLists.txt  mock_test.cc
scripts/templates/components/gtest/example/gtest_example/: CMakeLists.txt  sample_test.cc
